# tauri-wasm

./: Cargo.toml  README.md
.github/: README.md
.github/workflows/: ci.yml
examples/app/: Cargo.toml
examples/app-tauri/: Cargo.toml  Tauri.toml
examples/app-tauri/src/: lib.rs  main.rs
examples/app-ui/: Cargo.toml
examples/app/src/: lib.rs
tauri-wasm/: Cargo.toml  README.md  core.js
tauri-wasm/src/: core.rs  error.rs  event.rs  ext.rs  headers.rs  invoke.rs  lib.rs  serde.rs  string.rs
xtask/: Cargo.toml
xtask/src/: main.rs
