[workspace]
resolver = "3"
members = ["examples/*", "tauri-wasm", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
tauri-wasm = { version = "0.1.0", path = "tauri-wasm" }
gloo = { version = "0.11", default-features = false }
serde_json = "1"
tauri = "2"
tauri-build = "2"
wasm-bindgen = { version = "0.2.100", default-features = false }
