[workspace]
resolver = "3"
members = ["examples/*", "tauri-wasm", "xtask"]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["nanoqsh"]
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/nanoqsh/tauri-wasm"

[workspace.dependencies]
tauri-wasm = { version = "=0.1.2", path = "tauri-wasm" }
gloo = { version = "0.11", default-features = false }
js-sys = { version = "0.3", default-features = false }
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
tauri = "2"
tauri-build = "2"
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = { version = "0.4.50", default-features = false }
web-sys = "0.3"

[workspace.lints.rust]
elided-lifetimes-in-paths = "deny"

[workspace.lints.clippy]
large-futures = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"
