[package]
name = "tauri-wasm"
description = "Tauri API in WASM"
documentation = "https://docs.rs/tauri-wasm"
readme = "README.md"
license = "MIT"
authors = ["nanoqsh"]
repository = "https://github.com/nanoqsh/tauri-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
serde = ["dep:serde", "serde-wasm-bindgen"]

[dependencies]
js-sys.workspace = true
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
gloo = { workspace = true, features = ["console"] }
serde = { workspace = true, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
