[package]
name = "tauri-wasm"
description = "Tauri API in WASM"
documentation = "https://docs.rs/tauri-wasm"
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde", "serde-wasm-bindgen"]

[dependencies]
js-sys.workspace = true
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
gloo = { workspace = true, features = ["console"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
