[package]
name = "tauri-wasm"
description = "The tauri framework library for pure rust frontend"
documentation = "https://docs.rs/tauri-wasm"
readme = "README.md"
keywords = ["async", "api", "wasm", "tauri"]
categories = ["api-bindings", "asynchronous", "wasm"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
serde = ["dep:serde", "serde-wasm-bindgen"]
headers = ["web-sys/Headers"]

[dependencies]
js-sys.workspace = true
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, optional = true }

[dev-dependencies]
gloo = { workspace = true, features = ["console"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
