[package]
name = "app-ui"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { workspace = true, features = ["console"] }
serde.workspace = true
tauri-wasm = { workspace = true, features = ["serde", "headers"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[lints]
workspace = true
